# accay

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  requirements.md
docs/adr/: 0001-python-cli-tooling.md
docs/cli-workspace/: design.md  semantics.md
docs/cli-workspace/interfaces/: operations.yaml
docs/cli-workspace/interfaces/schemas/: cli-workspace.yaml  initWorkspace-input.yaml  initWorkspace-output.yaml  installSkills-input.yaml  installSkills-output.yaml  packDeskDebugContext-input.yaml  packDeskDebugContext-output.yaml  packReviewContext-input.yaml  packReviewContext-output.yaml  runComponentRegression-input.yaml  runComponentRegression-output.yaml  runRegression-input.yaml  runRegression-output.yaml  serveReports-input.yaml  serveReports-output.yaml  validateComponent-input.yaml  validateComponent-output.yaml  validateSystem-input.yaml  validateSystem-output.yaml  validateWorkspace-input.yaml  validateWorkspace-output.yaml
docs/component-artifacts/: design.md  semantics.md
docs/component-artifacts/interfaces/: operations.yaml
docs/component-artifacts/interfaces/schemas/: component-artifacts.yaml  discoverComponents-input.yaml  discoverComponents-output.yaml  loadAcceptanceScope-input.yaml  loadAcceptanceScope-output.yaml  loadComponentArtifacts-input.yaml  loadComponentArtifacts-output.yaml  loadTestMap-input.yaml  loadTestMap-output.yaml
docs/component-harness/: design.md  semantics.md
docs/component-harness/interfaces/: operations.yaml
docs/component-harness/interfaces/schemas/: buildReviewContextSource-input.yaml  buildReviewContextSource-output.yaml  component-harness.yaml  validateComponentArtifacts-input.yaml  validateComponentArtifacts-output.yaml
docs/component-regression/: design.md  semantics.md
docs/component-regression/interfaces/: operations.yaml
docs/component-regression/interfaces/schemas/: aggregateAllComponentRegression-input.yaml  aggregateAllComponentRegression-output.yaml  component-regression.yaml  (+6 more)
docs/guidelines/: acceptance-review.md  automated-testing.md  desk-debugging.md  development.md  python-coding.md  review.md
docs/operation-directory/: design.md  semantics.md
docs/operation-directory/interfaces/: operations.yaml
docs/output-presentation/: design.md  semantics.md
docs/output-presentation/interfaces/: operations.yaml
docs/system-artifacts/: design.md  semantics.md
docs/system-artifacts/interfaces/: operations.yaml
docs/system-harness/: design.md  semantics.md
docs/system-harness/interfaces/: operations.yaml
src/accay/: __init__.py  __main__.py  cli.py  project.py
tests/: test_project.py
tests/contract/: test_component_interface_artifacts.py
(+40 files in other folders)
